--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   "content_scripts": [
     {
       "matches": ["*://app.monarchmoney.com/*"],
-      "js": ["content.js"],
+      "js": ["mask-utils.js", "content.js"],
       "run_at": "document_end"
     }
   ],
